--- a/sass/base/_query.scss
+++ b/sass/base/_query.scss
@@ -1,3 +1,7 @@
+/* ------------------------------------------ */
+/* -------query de la pagina inicio--------- */
+/* ---------------------------------------- */
+
 /* ===home: MediaQuery del menu=== */
 @media (max-width: 969px) {
   .nav__label {
@@ -9,7 +13,7 @@
     position: fixed;
     top: 80px;
     bottom: 0;
-    background: #001514;
+    background: $color-menu-responsive;
     width: 100%;
     left: 0;
     display: flex;
@@ -30,7 +34,11 @@
     width: 100%;
     height: 3px;
     padding: 2px;
-    background: var(--color-blanco);
+    background: $color-blanco;
+  }
+
+  .headline__wave {
+    width: 100%;
   }
 }
 
@@ -46,7 +54,7 @@
   .hero__titulo {
     text-align: center;
     font-size: 2rem;
-    color: var(--color-primario);
+    color: $color-primario;
     font-size: 3rem;
     padding-bottom: 30px;
   }
@@ -193,7 +201,7 @@
     margin-bottom: 2rem;
     width: 70%;
     background-size: cover;
-    box-shadow: var(--box-shadow-principal);
+    box-shadow: $box-shadow-principal;
   }
 
   .layouts__referido {
@@ -212,10 +220,77 @@
 @media screen and (max-width: 500px) {
   .opinion {
     padding: 3rem 0;
-    background: #fefdff;
+    background: $color-secundario;
   }
 
   .opinion__mensaje {
     width: 90%;
+  }
+}
+
+/* ------------------------------------------ */
+/* -------query de la pagina producto------- */
+/* ---------------------------------------- */
+
+/* ===producto: MediaQuery seccion encabezado=== */
+
+@media screen and (max-width: 500px) {
+  .headline__main {
+    height: 80vh;
+    display: flex;
+    align-items: center;
+  }
+
+  .headline__titulo {
+    text-align: center;
+    font-size: 2rem;
+    font-size: 3rem;
+    padding-bottom: 30px;
+    padding: 0;
+  }
+
+  .headline__buscar {
+    display: none;
+  }
+}
+
+/* ===producto: MediaQuery seccion producto tipografia=== */
+@media screen and (max-width: 818px) {
+  .precio {
+    font-size: 1.5rem;
+  }
+
+  .juego {
+    font-size: 1rem;
+  }
+
+  .moneda {
+    font-size: 1.5rem;
+  }
+
+  .text {
+    font-size: 0.8rem;
+  }
+}
+
+/* ===producto: MediaQuery seccion producto grid=== */
+@media screen and (max-width: 500px) {
+  .product__grid {
+    width: 85%;
+    height: 100%;
+    display: grid;
+    gap: 30px;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(9, 1fr);
+    grid-template-areas:
+      "card1"
+      "card2"
+      "card3"
+      "card4"
+      "card5"
+      "card6"
+      "card7"
+      "card8"
+      "card9";
   }
 }
