--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,18 +3,22 @@ body {
   font-family: "Fredoka One", cursive;
   font-family: "Gothic A1", sans-serif;
   font-family: "Poppins", sans-serif;
-  background: var(--color-blanco);
+  background: $color-blanco;
   font-weight: 400;
   line-height: 1.7;
   color: #000;
 }
+
+/* ------------------------------------------ */
+/* -----tipografia de la pagina inicio------ */
+/* ---------------------------------------- */
 
 /* ===home: seccion about === */
 .about {
   &__titulo {
     font-size: 5rem;
     text-align: left;
-    color: var(--color-terciario);
+    color: $color-terciario;
     margin-bottom: 2rem;
   }
 
@@ -22,12 +26,12 @@ body {
     font-family: "Fredoka One", cursive;
     font-size: 1.8rem;
     padding-bottom: 0.8rem;
-    color: var(--color-terciario);
+    color: $color-terciario;
   }
 
   &__text {
     margin-bottom: 2rem;
-    color: var(--color-terciario);
+    color: $color-terciario;
     text-align: justify;
     font-size: 1.3rem;
   }
@@ -38,7 +42,7 @@ body {
     height: 20rem;
     background-size: cover;
     border-radius: 50%;
-    box-shadow: var(--box-shadow-principal);
+    box-shadow: $box-shadow-principal;
   }
 }
 
@@ -86,7 +90,6 @@ body {
 }
 
 /* ===home: seccion layout=== */
-
 .layouts {
   &__title {
     font-size: 4.4rem;
@@ -99,7 +102,6 @@ body {
 }
 
 /* ===home: seccion opinion=== */
-
 .opinion {
   &__title {
     font-size: 4rem;
@@ -116,8 +118,8 @@ body {
     padding: 3rem;
     width: 100%;
     margin: 0 auto;
-    background: #fff;
-    border: 0.1rem solid black;
+    background: $color-blanco;
+    border: 0.1rem solid $color-negro;
     border-radius: 1rem;
   }
 
@@ -127,7 +129,7 @@ body {
   }
 }
 
-/* ===home: seccion noticias=== */
+/* ===page home: seccion noticias=== */
 .noticias {
   &__titulo {
     font-size: 3.5rem;
@@ -139,7 +141,7 @@ body {
     padding-bottom: 1.5rem;
     font-family: "Gothic A1", sans-serif;
     font-weight: 700;
-    color: #3381fe;
+    color: $color-noticias-text;
     font-size: 1.8rem;
 
     &::after {
@@ -147,7 +149,7 @@ body {
       display: block;
       width: 100%;
       height: 0.1rem;
-      background: #000000;
+      background: $color-negro;
     }
   }
 
@@ -158,7 +160,7 @@ body {
   }
 
   &__tituloNoticia {
-    color: #3381fe;
+    color: $color-noticias-text;
     font-family: "Gothic A1", sans-serif;
     font-size: 1.6rem;
 
@@ -167,7 +169,49 @@ body {
       display: block;
       width: 100%;
       height: 0.1rem;
-      background: #000000;
+      background: $color-negro;
     }
   }
+}
+
+/* ------------------------------------------ */
+/* ----tipografia de la pagina producto----- */
+/* ---------------------------------------- */
+
+/* ===producto: seccion product=== */
+.product {
+  &__texts {
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+
+  &__ventas {
+    display: flex;
+    flex-direction: column;
+    margin-left: 1rem;
+  }
+}
+
+.fa-sack-dollar {
+  font-size: 1.4rem;
+  margin-right: 1rem;
+}
+
+.precio {
+  font-size: 2.3rem;
+}
+
+.juego {
+  font-size: 1.8rem;
+}
+
+.moneda {
+  font-size: 1.8rem;
+}
+
+.text {
+  font-size: 1rem;
 }
