--- a/sass/base/_query.scss
+++ b/sass/base/_query.scss
@@ -2,77 +2,15 @@
 /* -------query de la pagina inicio--------- */
 /* ---------------------------------------- */
 
-/* ===home: MediaQuery del menu=== */
-@media (max-width: 969px) {
-  .nav__label {
-    display: block;
-    cursor: pointer;
-  }
-
-  .nav__menu {
-    position: fixed;
-    top: 80px;
-    bottom: 0;
-    background: $color-menu-responsive;
-    width: 100%;
-    left: 0;
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    align-items: center;
-    clip-path: circle(0 at center);
-    transition: clip-path 1s ease-in-out;
-  }
-
-  .nav__input:checked + .nav__menu {
-    clip-path: circle(100% at center);
-  }
-
-  .nav__link--media::after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 3px;
-    padding: 2px;
-    background: $color-blanco;
-  }
-
-  .headline__wave {
-    width: 100%;
-  }
-}
-
 /* ===home: MediaQuery del hero=== */
-@media screen and (max-width: 500px) {
-  .hero__main {
-    height: 80vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+@media screen and (max-width: 963px) {
+  .hero {
+    height: 100vh;
+    clip-path: polygon(0 0, 100% 0, 100% 100vh, 0 100%);
 
-  .hero__titulo {
-    text-align: center;
-    font-size: 2rem;
-    color: $color-primario;
-    font-size: 3rem;
-    padding-bottom: 30px;
-  }
-
-  .hero__buscar {
-    display: none;
-  }
-
-  .hero__search {
-    border: 1px solid black;
-  }
-
-  .hero__picture {
-    width: 85%;
-  }
-
-  .hero__img {
-    max-width: 100%;
+    &__titulo {
+      font-size: 5rem;
+    }
   }
 }
 
@@ -97,10 +35,23 @@
 }
 
 /* ===home: MediaQuery seccion portafolio=== */
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 1024px) {
   .contenedor {
     width: 95%;
-    max-width: 39rem;
+    max-width: 98rem;
+    overflow: hidden;
+    margin: 0 auto;
+  }
+
+  .portafolio__paragrafo {
+    font-size: 1.3rem;
+  }
+}
+
+@media screen and (max-width: 963px) {
+  .contenedor {
+    width: 95%;
+    max-width: 80rem;
     overflow: hidden;
     margin: 0 auto;
   }
@@ -111,32 +62,34 @@
   }
 
   .portafolio__paragrafo {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
 
   .portafolio__grid {
     height: 100%;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(7, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(5, 1fr);
     grid-template-areas:
-      "nota nota"
-      "nota nota"
-      "nota nota"
-      "member1 member2"
-      "member3 member4"
-      "member5 member6"
-      "member7 member8"
-      "member9 .";
+      "nota nota nota"
+      "nota nota nota"
+      "member1 member2 member3"
+      "member4 member5 member6"
+      "member7 member8 member9";
     gap: 1rem;
     place-items: center;
   }
 
   .portafolio__informacion {
-    height: 53rem;
+    height: 50rem;
     gap: 2rem;
-    width: 90%;
+    width: 84%;
     margin: 0 auto;
+  }
+
+  .portafolio__picture {
+    width: 21rem;
+    height: 18rem;
   }
 
   .nota {
