--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -77,3 +77,42 @@
     display: none;
   }
 }
+
+@media (max-width: 962px) {
+  .nav__label {
+    display: block;
+    cursor: pointer;
+  }
+
+  .nav__menu {
+    position: fixed;
+    top: 80px;
+    bottom: 0;
+    background: $color-menu-responsive;
+    width: 100%;
+    left: 0;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    clip-path: circle(0 at center);
+    transition: clip-path 1s ease-in-out;
+  }
+
+  .nav__input:checked + .nav__menu {
+    clip-path: circle(100% at center);
+  }
+
+  .nav__link--media::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px;
+    padding: 2px;
+    background: $color-blanco;
+  }
+
+  .headline__wave {
+    width: 100%;
+  }
+}
