--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,7 +5,7 @@ body {
   font-family: "Poppins", sans-serif;
   background: $color-blanco;
   font-weight: 400;
-  line-height: 1.7;
+  /* line-height: 1.7; */
   color: #000;
 }
 
@@ -131,6 +131,7 @@ body {
 
 /* ===page home: seccion noticias=== */
 .noticias {
+  
   &__titulo {
     font-size: 3.5rem;
     margin-bottom: 3rem;
