--- a/sass/base/_query.scss
+++ b/sass/base/_query.scss
@@ -66,6 +66,7 @@
   }
 
   .portafolio__grid {
+    margin-top: 15px;
     height: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -133,6 +134,21 @@
 }
 
 /* ===home: MediaQuery seccion layout=== */
+@media screen and (max-width: 768px) {
+  .layouts__title {
+    font-size: 2rem;
+  }
+
+  .layouts__img3 {
+    margin: 3rem;
+  }
+
+  .layouts__paragrafo {
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
+}
+
 @media screen and (max-width: 500px) {
   .layouts__control {
     display: flex;
@@ -170,6 +186,13 @@
 }
 
 /* ===home: MediaQuery seccion opinion=== */
+@media screen and (max-width: 768px) {
+  .opinion {
+    padding: 3rem;
+    background: #fefdff;
+  }
+}
+
 @media screen and (max-width: 500px) {
   .opinion {
     padding: 3rem 0;
@@ -181,12 +204,59 @@
   }
 }
 
+/* ===home: MediaQuery seccion noticias=== */
+@media screen and (max-width: 768px) {
+  .noticias {
+    padding-bottom: 3.6rem;
+    background: #fefdff;
+  }
+
+  .noticias__grid {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-template-areas:
+      "notiCero notiCero notiCero notiCero"
+      "notiCero notiCero notiCero notiCero"
+      "notiCero notiCero notiCero notiCero"
+      "notiUno notiUno notiDos notiDos"
+      "notiTres notiTres . .";
+  }
+
+  .noticias__imagenUno {
+    background-image: url("../img/warzoneNoti.jpg");
+    width: 100vw;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .noticias__imagenDos {
+    background-image: url("../img/grandNoti.jpg");
+    width: 100vw;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .noticias__imagenTres {
+    background-image: url("../img/witcherNoti.jpg");
+    width: 100vw;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
 /* ------------------------------------------ */
 /* -------query de la pagina producto------- */
 /* ---------------------------------------- */
 
 /* ===producto: MediaQuery seccion encabezado=== */
-
 @media screen and (max-width: 500px) {
   .headline__main {
     height: 80vh;
